# fastapi-react-typescript-chatbot

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.frontend-dev  backend.md  compose.yml  demo-acc.md  docker-start.sh  frondend.md  frontend.md  fullstack.md  git.md  readme.md  start.sh
backend/: .env.example  README.md  auth_service.py  chat_service_sqlite.py  config_sqlite.py  database_sqlite.py  main_sqlite.py  models.py  pyproject.toml  requirements_sqlite.txt
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  reportWebVitals.ts  types.ts
frontend/src/components/: AllConversations.tsx  ChatBot.tsx  ConfirmDialog.tsx  LoadingDots.tsx  Login.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx
frontend/src/styles/: AllConversations.css  Animations.css  ChatBot.css  ConfirmDialog.css  Login.css  MessageBubble.css  MessageInput.css  Messages.css  global.css
